--- a/Major/student/displayresume.html
+++ b/Major/student/displayresume.html
@@ -8,7 +8,7 @@
     <title>Resume</title>
 
     <link href="./css/displayresume.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
@@ -28,12 +28,13 @@
                 </div>
                 <!-- head right box -->
                 <div class="p-2 d-flex justify-content-center align-items-start flex-column">
-                    <span>visheshsaxena7777@gmail.com</span>
-                    <span>7355288989</span>
                     <span>
-                        <a href="linkedin.com/in/vishesh-saxena-550085220">
-                            linkedin.com/in/vishesh-saxena-550085220
-                        </a>
+                        <i class="uil uil-envelope"></i>
+                        visheshsaxena7777@gmail.com
+                    </span>
+                    <span>
+                        <i class="uil uil-phone-alt"></i>
+                        7355288989
                     </span>
                 </div>
             </div>
@@ -46,12 +47,7 @@
                 <!-- Tools -->
                 <div class="border-bottom border-dark">
                     <h5 class="col-12">Tools</h5>
-                    <ul>
-                        <li>Figma</li>
-                        <li>Ms Office</li>
-                        <li>Adobe XD</li>
-                        <li>Canva</li>
-                    </ul>
+                    <span>Tools here</span>
                 </div>
 
                 <!-- Education -->
@@ -85,17 +81,7 @@
                 <!-- Skills -->
                 <div class="border-bottom border-dark">
                     <h5 class="col-12 pt-2">Skills</h5>
-                    <ul>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>Javascript</li>
-                        <li>Jquery</li>
-                        <li>Bootstrap</li>
-                        <li>PHP</li>
-                        <li>Mysql</li>
-                        <li>Java</li>
-                        <li>Python</li>
-                    </ul>
+                    <span>Skills</span>
                 </div>
 
                 <!-- Languages -->
